--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "formidable": "^1.2.1",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "qcloud-cos-sts": "^2.0.7",
     "qcloudsms_js": "^0.1.1",
