--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formidable": "^1.2.1",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
+    "nodemailer": "^6.1.1",
     "qcloud-cos-sts": "^2.0.7",
     "qcloudsms_js": "^0.1.1",
     "serve-favicon": "^2.5.0",
