--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.1.1",
     "qcloud-cos-sts": "^2.0.7",
     "qcloudsms_js": "^0.1.1",
+    "request": "^2.88.0",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.2.0"
   }
