--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "fluent-ffmpeg": "^2.1.2",
     "formidable": "^1.2.1",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
@@ -27,6 +28,7 @@
     "qcloudsms_js": "^0.1.1",
     "request": "^2.88.0",
     "serve-favicon": "^2.5.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "tencentcloud-sdk-nodejs": "^3.0.64"
   }
 }
