--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "wubo",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cos-nodejs-sdk-v5": "^2.5.8",
@@ -21,6 +22,7 @@
     "express-session": "^1.16.1",
     "fluent-ffmpeg": "^2.1.2",
     "formidable": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "nodemailer": "^6.1.1",
